# Pipelet-OCPP-SDK

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.backend  Dockerfile.frontend  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py
backend/: __init__.py  wsgi.py
backend/app/: __init__.py  config.py  extensions.py
backend/app/api/: __init__.py  auth.py  export.py  health.py  logs.py  pipelets.py  sim.py  workflow.py
backend/app/models/: __init__.py  auth.py  logs.py  pipelet.py  settings.py  workflow.py
backend/app/ocpp/: __init__.py  logging.py  server.py  simulator.py
backend/app/pipelets/: __init__.py  runtime.py
backend/app/utils/: __init__.py  auth.py  security.py
backend/app/workflow/: __init__.py  runner.py
backend/scripts/: backup.sh  restore.sh  seed.py
backend/tests/: conftest.py  test_auth.py  test_export_import.py  test_health.py  test_pipelet_api.py  test_runtime.py  test_workflow_api.py  test_workflow_runtime.py
docs/: api.postman_collection.json  architecture.md  dev.md  run_on_ my_mac.md  test_happy_path.md
docs/diagrams/: ocpp-sequence.puml  workflow-runtime.puml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  index.css  seed.ts
frontend/src/components/: LogViewer.tsx  PipeletPalette.tsx  SimulatorPanel.tsx  StatusBars.tsx  TokenPanel.tsx  WorkflowCanvas.tsx  icons.tsx
frontend/src/types/: rete-area-plugin.d.ts  rete-react-render-plugin.d.ts
(+8 files in other folders)
