[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pipelet-ocpp-backend"
version = "0.1.0"
description = "Backend service scaffolding for the Pipelet OCPP SDK."
requires-python = ">=3.11"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E203", "E266", "E501"]

[tool.ruff.lint.isort]
known-first-party = ["app", "backend"]

[tool.pytest.ini_options]
pythonpath = ["backend"]
addopts = "-ra"
